--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,5 +31,6 @@ subjects:
 - !lcsh 'Spanish literature'
 - !lcsh 'Authors, Spanish'
 - !lcc 'PQ'
+- GITenberg
 title: Semblanzas literarias
 url: http://www.gutenberg.org/ebooks/42376
